--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -37,16 +37,6 @@
      </rect>
     </property>
    </widget>
-   <widget class="QTreeView" name="treeView">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>261</y>
-      <width>221</width>
-      <height>131</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPushButton" name="batchbutton">
     <property name="geometry">
      <rect>
@@ -65,6 +55,16 @@
      <rect>
       <x>20</x>
       <y>10</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="listWidget">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>240</y>
       <width>256</width>
       <height>192</height>
      </rect>
