--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,23 +18,47 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
         <string>Single Image</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="0" column="0">
+        <item row="0" column="1">
+         <widget class="QCheckBox" name="checkBox">
+          <property name="text">
+           <string>lossy</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QCheckBox" name="checkBox_2">
+          <property name="text">
+           <string>lossless</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
          <widget class="QGraphicsView" name="graphicsView"/>
         </item>
-        <item row="1" column="0">
+        <item row="1" column="2">
          <widget class="QLineEdit" name="lineEdit"/>
         </item>
-        <item row="2" column="0">
+        <item row="2" column="2">
          <widget class="QPushButton" name="pushButton">
           <property name="text">
            <string>convert single image to webp</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="lineEdit_2"/>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>quality</string>
           </property>
          </widget>
         </item>
@@ -45,7 +69,7 @@
         <string>BatchMode</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="0" column="1">
+        <item row="0" column="1" colspan="3">
          <widget class="QListWidget" name="listWidget"/>
         </item>
         <item row="1" column="0">
@@ -59,6 +83,34 @@
          <widget class="QLineEdit" name="loopdelay">
           <property name="text">
            <string>80</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>loop count</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
+         <widget class="QLineEdit" name="loopcount">
+          <property name="text">
+           <string>2</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="4">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>quality</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="5">
+         <widget class="QLineEdit" name="batchQuality">
+          <property name="text">
+           <string>60</string>
           </property>
          </widget>
         </item>
